Testcase for GLASSFISH-12051: Web Service and WebServiceRef co-bundled in the same module.
svn path=/trunk/; revision=37474


Former-commit-id: addda33ffe1cccd75d3b4cda0761bd6b99ec64f5