@@ -34,7 +34,7 @@
       <delete dir="${env.S1AS_HOME}/build/localwsdl"/>
     </target>
 
-    <target name="setup" depends="assemble-web,  deploy-app, assemble-client, deploy-client" />
+    <target name="setup" depends="assemble-web,  deploy-app" />
 
     <target name="compile" depends="init-common">
         <mkdir dir="${build.classes.dir}"/>
@@ -97,48 +97,6 @@
           level="verbose"/>
     </target>
 
-
-    <target name="assemble-client" depends="init-common">
-      <mkdir dir="${build.classes.dir}/webclient/WEB-INF/classes"/>
-      <antcall target="wsimport">
-        <param name="wsimport.args"
-          value="-p client  -Xendorsed -keep -d ${build.classes.dir}/webclient/WEB-INF/classes http://localhost:8080/webserviceref-lookup/webservice/SubtractNumbersService?wsdl"/>
-      </antcall>
-      <javac srcdir="." destdir="${build.classes.dir}/webclient/WEB-INF/classes"
-            includes="webclient/**">
-         <classpath refid="classpath"/>
-         <compilerarg value="-Djava.endorsed.dirs=${env.S1AS_HOME}/modules/endorsed"/>
- 
-      </javac>
-      <copy file="web.xml" tofile="${build.classes.dir}/webclient/WEB-INF/web.xml"/>
-      <copy file="client-sun-web.xml" tofile="${build.classes.dir}/webclient/WEB-INF/sun-web.xml"/>
-      <jar destfile="${assemble.dir}/wsclient.war" basedir="${build.classes.dir}/webclient" includes="**"/>
-    </target>
-
-    <target name="deploy-client" depends="init-common">
-      <property name="client.war" value="${assemble.dir}/wsclient.war"/>
-      <echo message="Deploying ${wsdl.war} from ${basedir}." level="verbose"/>
-      <exec executable="${ASADMIN}">
-        <arg line="deploy"/>
-        <arg line="--user ${admin.user}"/>
-        <arg line="--passwordfile ${admin.password.file}"/>
-        <arg line="--host ${admin.host}"/>
-        <arg line="--port ${admin.port}"/>
-        <arg line="${client.war}"/>
-      </exec>
-    </target>
-
-    <target name="undeploy-client" depends="init-common">
-      <exec executable="${ASADMIN}">
-        <arg line="undeploy"/>
-        <arg line="--user ${admin.user}"/>
-        <arg line="--passwordfile ${admin.password.file}"/>
-        <arg line="--host ${admin.host}"/>
-        <arg line="--port ${admin.port}"/>
-        <arg line="wsclient"/>
-      </exec>
-    </target>
-
     <target name="deploy-app">
       <antcall target="deploy-war-common">
         <param name="contextroot" value="${appname}"/>
@@ -147,7 +105,6 @@
 
     <target name="undeploy" depends="init-common">
         <antcall target="undeploy-war-common"/>
-        <antcall target="undeploy-client"/>
     </target>
     
     <target name="runtest" depends="init-common">
